--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Learning JS for web.</title>
 </head>
 <body>
-    <h1>Happy Times.</h1>
+    <h1>Creating Happy Times.</h1>
 </body>
 </html>
