--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <h1>Creating Happy Times.</h1>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p>
+
+    <label id="mbl">Enter your Name</label><br>
+    <input type="text" id="mtx"><br>
+    <button type="button" id="mbt">Submit</button>
+
+    <label id="a">Side A:</label><br>
+    <input type="text" id="atx"><br>
+    <label id="b">Side B:</label><br>
+    <input type="text" id="btx"><br>
+    <button type="button" id="btn">Submit</button><br>
+    <label id="c"></label><br>
+
     <script src="index.js"></script>
 </body>
 </html>
