--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Creating Happy Times.</h1>
+    <!-- <h1>Creating Happy Times.</h1>
     <p id="p1"></p>
     <p id="p2"></p>
     <p id="p3"></p>
@@ -22,7 +22,7 @@
     <label id="b">Side B:</label><br>
     <input type="text" id="btx"><br>
     <button type="button" id="btn">Submit</button><br>
-    <label id="c"></label><br>
+    <label id="c"></label><br> -->
 
     <script src="index.js"></script>
 </body>
