--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <button type="button" id="btn">Submit</button><br>
     <label id="c"></label><br> -->
 
+    <!-- <label for="mCbx">Meh!!</label>
+    <input type="checkbox" id="mCbx"><br>
+    <label for="idr1">Rupay</label>
+    <input type="radio" name="card" id="idr1">
+    <label for="idr2">UPI</label>
+    <input type="radio" name="card" id="idr2">
+    <label for="idr3">Net Banking</label>
+    <input type="radio" name="card" id="idr3"><br>
+    <button id="mBtn">Submit</button><br><br> -->
+
     <script src="index.js"></script>
 </body>
 </html>
