--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <input type="radio" name="card" id="idr3"><br>
     <button id="mBtn">Submit</button><br><br> -->
 
+    <label id="mRT"></label>
+    
     <script src="index.js"></script>
 </body>
 </html>
