--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
     <input type="radio" name="card" id="idr3"><br>
     <button id="mBtn">Submit</button><br><br> -->
 
-    <label id="mRT"></label>
-    
+    <!-- <label id="mRT"></label> -->
+    <h1>Number Guessing game.</h1>
+    <p>pick a # between 1 - 10 </p>
+    <label>Enter a guess</label>
+
+    <input id="gFe">
+    <input type="submit" id="sBt">
     <script src="index.js"></script>
+
 </body>
 </html>
