--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Learning JS for web.</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- <h1>Creating Happy Times.</h1>
     <p id="p1"></p>
     <p id="p2"></p>
     <p id="p3"></p>
 
-    <label id="mbl">Enter your Name</label><br>
-    <input type="text" id="mtx"><br>
+    <label id="mbl">Enter your Name</label><br />
+    <input type="text" id="mtx" /><br />
     <button type="button" id="mbt">Submit</button>
 
-    <label id="a">Side A:</label><br>
-    <input type="text" id="atx"><br>
-    <label id="b">Side B:</label><br>
-    <input type="text" id="btx"><br>
-    <button type="button" id="btn">Submit</button><br>
-    <label id="c"></label><br> -->
+    <label id="a">Side A:</label><br />
+    <input type="text" id="atx" /><br />
+    <label id="b">Side B:</label><br />
+    <input type="text" id="btx" /><br />
+    <button type="button" id="btn">Submit</button><br />
+    <label id="c"></label><br />
 
-    <!-- <label for="mCbx">Meh!!</label>
-    <input type="checkbox" id="mCbx"><br>
+    <label for="mCbx">Meh!!</label>
+    <input type="checkbox" id="mCbx" /><br />
     <label for="idr1">Rupay</label>
-    <input type="radio" name="card" id="idr1">
+    <input type="radio" name="card" id="idr1" />
     <label for="idr2">UPI</label>
-    <input type="radio" name="card" id="idr2">
+    <input type="radio" name="card" id="idr2" />
     <label for="idr3">Net Banking</label>
-    <input type="radio" name="card" id="idr3"><br>
-    <button id="mBtn">Submit</button><br><br> -->
+    <input type="radio" name="card" id="idr3" /><br />
+    <button id="mBtn">Submit</button><br /><br />
 
-    <!-- <label id="mRT"></label> -->
+    <label id="mRT"></label>
     <h1>Number Guessing game.</h1>
-    <p>pick a # between 1 - 10 </p>
+    <p>pick a # between 1 - 10</p>
     <label>Enter a guess</label>
 
-    <input id="gFe">
-    <input type="submit" id="sBt">
-    <script src="index.js"></script>
+    <input id="gFe" />
+    <input type="submit" id="sBt" />
+    <button id="loginButton">Login</button>
 
-</body>
+    <button id="myButton">Buy</button> -->
+
+    <label id="clock"></label>
+    <script src="temp.js"></script>
+  </body>
 </html>
