--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
     <button id="myButton">Buy</button> -->
 
     <label id="clock"></label>
-    <script src="temp.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
