--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
     <button id="myButton">Buy</button> -->
 
-    <label id="clock"></label>
-    <script type="module" src="./index.js"></script>
+    <!-- <label id="clock"></label> -->
+    <!-- <script type="module" src="./index.js"></script> -->
+    <script type="module" src="./promise.js"></script>
   </body>
 </html>
