--- a/js_element_selectors/index.html
+++ b/js_element_selectors/index.html
@@ -12,7 +12,7 @@
 
     <input type="radio" name="fruits" value="apple" />
     <label for="apple">apple</label><br />
-    <input type="radio" name="fruits" value="orange" />
+    <input type="radio" name="fruits" value="orange" checked="checked" />
     <label for="orange">orange</label><br />
     <input type="radio" name="fruits" value="banana" />
     <label for="banana">banana</label><br />
