updated deletion and changes.

--- a/js_element_selectors/index.html
+++ b/js_element_selectors/index.html
@@ -10,6 +10,8 @@
   <body>
     <h1 id="myTitle">This is the Menu</h1>
 
+    <h2 id="myTitle2">This is the Sub-Menu</h2>
+
     <input type="radio" name="fruits" value="apple" />
     <label for="apple">apple</label><br />
     <input type="radio" name="fruits" value="orange" checked="checked" />
