--- a/canvas_api/index.html
+++ b/canvas_api/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <canvas id="myCanvas" width="500" height="500"></canvas>
-    <script src="./index.js"></script>
+    <canvas id="myCanvas2" width="500" height="500"></canvas>
+    <canvas id="myCanvas3" width="500" height="500"></canvas>
+    <canvas id="myCanvas4" width="500" height="500"></canvas>
+    <canvas id="myCanvas5" width="500" height="500"></canvas>
+    <script src="index.js"></script>
   </body>
 </html>
